2011-06-09  Bruno Haible  <bruno@clisp.org>

	acl tests: Fix compilation error on HP-UX 11.
	* tests/test-sameacls.c: Include <sys/acl.h> also on HP-UX.

2011-06-09  Bruno Haible  <bruno@clisp.org>

	rmdir: Avoid test failure on HP-UX 10.20.
	* tests/test-rmdir.h (test_rmdir_func): Accept ENOTEMPTY error, like
	EEXIST.

2011-06-07  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix usage message in 'mktempd_'
	* tests/init.sh (mktempd_): In the usage message, use literal
	'mktempd_', not '$ME' (which is even undefined), as the name of
	the subroutine.

2011-06-06  Eric Blake  <eblake@redhat.com>

	canonicalize-lgpl: use common idiom
	* m4/canonicalize.m4 (gl_FUNC_REALPATH_WORKS): Prefer older rm -rf
	over newer POSIX -Rf.
	Reported by Bruno Haible.

	canonicalize-lgpl: work around AIX realpath bug
	* m4/canonicalize.m4 (gl_FUNC_REALPATH_WORKS): Expose AIX bug.
	* doc/posix-functions/realpath.texi (realpath): Document it.
	Reported by Bruno Haible.

2011-06-06  Bruno Haible  <bruno@clisp.org>

	careadlinkat: Avoid mismatch between ssize_t and int.
	* lib/careadlinkat.h (careadlinkatcwd): Declare as a function always.
	* lib/careadlinkat.c (careadlinkatcwd): Define always.

2011-06-05  Bruno Haible  <bruno@clisp.org>

	ansi-c++-opt: Interoperability with libtool.
	* m4/ansi-c++.m4 (gl_PROG_ANSI_CXX): When a C++ compiler is not found,
	set the variable to "no", not to ":".
	* NEWS: Mention the change.

2011-06-05  Bruno Haible  <bruno@clisp.org>

	acl: Fix test failure on AIX 7.
	* tests/test-sameacls.c (main) [AIX]: Fix aclx_printStr invocation.
	Based on a patch by Jørn Amundsen <Jorn.Amundsen@ntnu.no>.

2011-06-05  Bruno Haible  <bruno@clisp.org>

	pipe-filter-ii: Fix test failure on AIX and IRIX.
	* lib/pipe-filter-ii.c (pipe_filter_ii_execute): When write() fails
	with EAGAIN, retry with a smaller buffer size.

2011-06-05  Bruno Haible  <bruno@clisp.org>

	localename: Fix link dependencies.